@@ -1187,6 +1187,14 @@ SEXP R_set_prim_method(SEXP fname, SEXP op, SEXP code_vec, SEXP fundef,
 	}
 	return value;
     }
+    if (!isPrimitive(op)) {
+        SEXP internal = R_do_slot(op, install("internal"));
+        op = INTERNAL(install(CHAR(asChar(internal))));
+        if (op == R_NilValue) {
+          error("'internal' slot does not name an internal function: %s",
+                CHAR(asChar(internal)));
+        }
+    }
     do_set_prim_method(op, code_string, fundef, mlist);
     vmaxset(vmax);
     return fname;
@@ -1451,6 +1459,9 @@ R_possible_dispatch(SEXP call, SEXP op, SEXP args, SEXP rho,
 	if(isPrimitive(value))
 	    return(NULL);
 	if(isFunction(value)) {
+            if (inherits(value, "internalDispatchMethod")) {
+                return(NULL);
+            }
 	    /* found a method, call it with promised args */
 	    if(!promisedArgs) {
 		PROTECT(s = promiseArgs(CDR(call), rho));
